<resources>
    <string name="app_name">DiyCode</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <item name="tag_first" type="id"/>
    <item name="tag_second" type="id"/>
    <item name="tag_third" type="id"/>
    <item name="glide_tag" type="id"/>
    <item name="drawable_callback_tag" type="id"/>

    <string name="scroll_aware_fab_behavior">com.sneider.diycode.utils.ScrollAwareFABBehavior</string>

    <string name="topics">社区</string>
    <string name="projects">项目</string>
    <string name="news">News</string>
    <string name="sites">酷站</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="refresh">刷新</string>
    <string name="open_browser">在浏览器中打开</string>
    <string name="save">保存</string>
    <string name="favorite">收藏</string>
    <string name="favorited">已收藏</string>
    <string name="view_my_favorite">查看我的收藏</string>
    <string name="open_web">在网页中查看</string>
    <string name="send">提交</string>
    <string name="notification">通知</string>
    <string name="select_node">选择节点</string>
    <string name="unread">未读</string>
    <string name="clear_all">清空</string>
    <string name="my_topic">我的帖子</string>
    <string name="his_topic">他的帖子</string>
    <string name="my_reply">我的回复</string>
    <string name="his_reply">他的回复</string>
    <string name="my_share">我的分享</string>
    <string name="his_share">他的分享</string>
    <string name="my_favorite">我的收藏</string>
    <string name="his_favorite">他的收藏</string>
    <string name="my_notification">我的通知</string>
    <string name="my_follower">我的关注者</string>
    <string name="who_follower">{0} 的关注者</string>
    <string name="his_follower">他的关注者</string>
    <string name="my_following">我正在关注</string>
    <string name="who_following">{0} 正在关注</string>
    <string name="his_following">他正在关注</string>
    <string name="my_block">我已屏蔽</string>
    <string name="following">关注</string>
    <string name="block">屏蔽</string>
    <string name="github_ranking">Github Ranking</string>
    <string name="wiki">Wiki</string>
    <string name="setting">设置</string>
    <string name="webview_hint">轻触屏幕重新加载</string>
    <string name="dot">•</string>
    <string name="edit">编辑</string>
    <string name="preview">预览</string>
    <string name="content">内容(Markdown格式)</string>
    <string name="title">标题</string>
    <string name="link">链接</string>
    <string name="delete">删除</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="please_login">请先登录</string>
    <string name="login_success">欢迎回来，{0}</string>
    <string name="login_failed">登录失败</string>
    <string name="login_ing">正在登录&#8230;</string>
    <string name="login_btn">登 录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="reply_content">回复内容</string>
    <string name="reload">重新加载</string>
    <string name="some_problem">似乎出了点问题</string>
    <string name="bottom">已经到底啦</string>
    <string name="exit">再按一次退出</string>
    <string name="reply_success">回复成功</string>
    <string name="reply_failed">回复失败</string>
    <string name="delete_hint">确定要删除吗？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="reply">回复</string>
    <string name="who_reply">{0} 的回复</string>
    <string name="reply_hint">请输入回复内容</string>
    <string name="reply_prefix">#{0}楼 @{1}</string>
    <string name="floor_deleted">{0}楼 Deleted</string>
    <string name="floor">#{0}楼</string>
    <string name="read_count">{0}次阅读</string>
    <string name="no_reply">暂无回复</string>
    <string name="publish_time">于{0}发布</string>
    <string name="topic">话题</string>
    <string name="no_data">没有数据</string>
    <string name="category">分类</string>
    <string name="uploading">正在上传&#8230;</string>
    <string name="clear_cache">清除缓存</string>
    <string name="total_cache_description">当前缓存大小约为 {0}</string>
    <string name="check_update">检查更新</string>
    <string name="current_version">当前版本 {0}</string>
    <string name="update">更新</string>
    <string name="contact">联系作者</string>
    <string name="contact_hint">请安装手机QQ或联系QQ:827173000</string>
    <string name="feedback">意见反馈</string>
    <string name="please_wait">请稍候&#8230;</string>
    <string name="search_content">搜索本站内容</string>
    <string name="app_is_latest">您的应用为最新版本</string>
    <string name="find_new_version">发现新版本</string>
    <string name="confirm_logout">确定要退出登录吗？</string>
    <string name="who_topic">{0} 的帖子</string>
    <string name="who_favorite">{0} 的收藏</string>
    <string name="what_topics">社区 : {0}</string>
    <string name="what_node">节点 : {0}</string>
    <string name="add_news">创建新分享</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_link">请输入链接</string>
    <string name="link_is_error">链接格式不正确</string>
    <string name="please_choose_category">请选择分类</string>
    <string name="quit_edit">退出此次编辑？</string>
    <string name="please_choose_node">请选择节点</string>
    <string name="please_input_content">请输入内容</string>
    <string name="add_topic">发布新话题</string>
    <string name="modify_topic">修改话题</string>
    <string name="confirm_clear_all">确定要清空全部通知吗？</string>
    <string name="followed">已关注</string>
    <string name="view_my_follow">查看我正在关注</string>
    <string name="blocked">已屏蔽</string>
    <string name="view_my_block">查看我已屏蔽</string>
    <string name="what_number_level">第{0}位会员 • {1}</string>
    <string name="what_number">第{0}位会员</string>
    <string name="add_success">创建成功</string>
    <string name="add_failed">创建失败</string>
    <string name="get_reply_failed">获取评论内容失败</string>
    <string name="upload_success">图片上传成功</string>
    <string name="upload_failed">图片上传失败</string>
    <string name="post_success">发布成功</string>
    <string name="post_failed">发布失败</string>
    <string name="update_success">话题更新成功</string>
    <string name="update_failed">话题更新失败</string>
    <string name="no_implement">此功能暂未实现</string>
    <string name="favorite_failed">收藏失败</string>
    <string name="unfavorite_failed">取消收藏失败</string>
    <string name="like_failed">点赞失败</string>
    <string name="unlike_failed">取消点赞失败</string>
    <string name="follow_failed">关注失败</string>
    <string name="unfollow_failed">取消关注失败</string>
    <string name="block_failed">屏蔽失败</string>
    <string name="unblock_failed">取消屏蔽失败</string>
    <string name="read_success">设置已读成功</string>
    <string name="read_failed">设置已读失败</string>
    <string name="what_unread">{0}条未读</string>
    <string name="no_unread">没有未读的通知</string>
    <string name="select_photo">选择图片</string>
    <string name="share_to">分享到&#8230;</string>
    <string name="what_reply">共收到{0}条回复</string>
    <string name="what_who_reply">{0}条回复 • 最后由{1}于{2}回复</string>
    <string name="info_deleted">相关信息已删除</string>
    <string name="reply_at">在帖子"{0}"回复了:</string>
    <string name="mention_you">提及你:</string>
    <string name="create_topic">创建了帖子: {0}</string>
    <string name="what_create_topic">你发布的话题"{0}"由于内容原因</string>
    <string name="what_node_moved">被管理员移到了"{0}"节点，请注意查看节点说明。</string>
    <string name="your_share">你的分享</string>
    <string name="no_content">暂无内容</string>
    <string name="what_floor">#{0}</string>
</resources>
