<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_margin="@dimen/spacing_xs"
            android:background="@drawable/bg_progress_circle"
            android:elevation="@dimen/spacing_xs"
            android:padding="@dimen/spacing_s"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_problem"/>

        <TextView
            android:id="@+id/reloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:text="@string/reload"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</FrameLayout>