<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:theme="@style/ToolBarTheme"
            app:titleTextAppearance="@style/ToolbarTitle"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/common_padding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:background="@color/color_f0f0f0"
                android:padding="@dimen/spacing_xs"
                android:textColor="@color/color_4d4d4d"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s">

                <EditText
                    android:id="@+id/et_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reply_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/color_4d4d4d"
                    android:textSize="15sp"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/spacing_m"
                android:background="@drawable/bg_press"
                android:text="@string/delete"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            style="@style/common_padding"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/color_ffffff"
            android:elevation="@dimen/spacing_xs"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_help"
                style="@style/common_button"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_help"/>

            <ImageView
                android:id="@+id/btn_insert_code"
                style="@style/common_button"
                android:layout_marginStart="@dimen/spacing_l"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_code"/>

            <ImageView
                android:id="@+id/btn_insert_image"
                style="@style/common_button"
                android:layout_marginStart="@dimen/spacing_l"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_image"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/spacing_xs"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xs"
                android:text="@string/uploading"
                android:textColor="@color/color_62646c"
                android:textSize="14sp"
                android:visibility="invisible"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/btn_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:text="@string/preview"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>